# apollo-fusion

./: Cargo.toml  Config.in  README.md  build.sh  external.desc  external.mk
.circleci/: config.yml
apps/: Cargo.toml
apps/adcs-hs/: adcs-hs-app.py  manifest.toml
apps/beacon-app/: Cargo.toml  manifest.toml
apps/beacon-app/src/: main.rs  transmit.rs
apps/beacon-app/src/packets/: adcs.rs  errors.rs  gps.rs  mod.rs  obc.rs  power.rs  radio.rs  supmcu.rs  temperature.rs
apps/deploy-app/: Cargo.toml  manifest.toml
apps/deploy-app/src/: deploy.rs  detumble.rs  graphql.rs  main.rs
apps/obc-hs/: Cargo.toml
apps/obc-hs/src/: check_fs.rs  (+4 more)
apps/telem-app/: Cargo.toml  README.md  manifest.toml
apps/telem-app/src/: duplex.rs  eps.rs  mai400.rs  main.rs  nsl.rs  obc.rs  oem6.rs  sup_mcu.rs  telem_db.rs
apps/watchdog-app/: Cargo.toml  README.md
common/: linux-kubos.config
configs/: apollo-fusion_defconfig  duplex-gateway.json  nsl-ground.toml
docs/: building-kubos.rst  communicating-with-the-stack.rst  conf.py  index.rst  installing-kubos.rst  upgrading-the-stack.rst
duplex-gateway/: README.md
gateway/: README.md  requirements.txt  run.py
gateway/config/: config.json
gateway/kubos_gateway/: command.py  command_result.py  major_tom.py  nsl_simplex_webapi.py  satellite.py  simplex_service.py
package/kubos-nsl-duplex/: kubos-nsl-duplex  kubos-nsl-duplex.mk
simplex-gateway/kubos_gateway/: gateway.py  major_tom.py
src/: main.rs  services.rs
tools/: build-apps.sh  build-os.sh  bundle-apps.sh  install-apps.sh  integration-test.py  package-install.sh
(+2 files in other folders)
