[package]
name = "beacon-app"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
byteorder = "1.2"
failure = "0.1.2"
kubos-app = { git = "https://github.com/kubos/kubos" }
kubos-system = { git = "https://github.com/kubos/kubos" }
log = "^0.4.0"
nsl-simplex-s3 = { git = "https://github.com/kubos/kubos", branch = "simplex-api" }
serde_json = "1.0"