[package]
name = "telem-app"
version = "0.1.0"
authors = ["Catherine Garabedian <catherine@kubos.co>"]
edition = "2018"

[dependencies]
failure = "0.1.2"
getopts = "0.2"
kubos-app = { path = "../../../../kubos/apis/app-api/rust" }
kubos-system = { path = "../../../../kubos/apis/system-api" }
log = "^0.4.0"
serde_json = "1.0"